[tool.poetry]
name = "PyQtDarkTheme"
version = "2.1.0"
description = "Flat dark theme for PySide and PyQt."
authors = ["Yunosuke Ohsugi <63651161+5yutan5@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/5yutan5/PyQtDarkTheme"
homepage = "https://github.com/5yutan5/PyQtDarkTheme"
documentation = "https://pyqtdarktheme.readthedocs.io"
packages = [{ include = "qdarktheme" }]

keywords = ["qt", "stylesheets", "dark-theme"]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Environment :: X11 Applications :: Qt",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
darkdetect = "^0.7.1"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-randomly = "^3.15.0"
pytest-qt = "^4.4.0"
pytest-xvfb = "^3.0.0"
pytest-mock = "^3.14.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

